--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -9,7 +9,7 @@
  FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_DELUGE:0 "Preparing to drench $PLANET|Y$"
  FLEETORDER_PLANET_KILLER_WINDUP:0 "Charging weapon: $PROGRESS|Y0%$"
  FLEETORDER_PLANET_KILLER_FIRING:0 "Firing weapon: $PROGRESS|Y0%$"
- STATUS_QUO_CREATE_NEW_EMPIRE:0 "A new $SPECIES|Y$ Empire will be created as an ally or subject of $ACTOR|Y$ out of $SYSTEMS|H$ occupied $TARGET|Y$ system(s)"
+ STATUS_QUO_CREATE_NEW_EMPIRE:0 "จักรวรรดิใหม่ $SPECIES|Y$ จะถูกสร้างขึ้นเป็นพันธมิตร หรือเป็นเมืองขึ้นของ $ACTOR|Y$ จากทั้งหมด $SYSTEMS|H$ ระบบดาวของ $TARGET|Y$ ที่ถูกยึดครอง"
  MESSAGE_DESC_FOR_PLANET_KILLER_CRACKER:0 "was utterly destroyed by"
  MESSAGE_DESC_FOR_PLANET_KILLER_SHIELDER:0 "was encased in an impenetrable shield by"
  MESSAGE_DESC_FOR_PLANET_KILLER_NEUTRON:0 "was purged of all higher forms of life by"
@@ -305,8 +305,8 @@
  HOME_BASE_INSTRUCTIONS:0 "§Gคลิกเพื่อเลือกฐานประจำการของกองยานนี้§!"
  INCREASE_HEADER:0 "§Hเพิ่ม§!"
  DECREASE_HEADER:0 "§Hลด§!"
- DECREASE_FM:5 "$DECREASE_HEADER$\n§GClick to decrease the number of ships of this design to be used in this fleet§!\n§YShift-click§! to decrease to the previous multiple of 10, §YControl-click§! to remove all ships"
- INCREASE_FM:5 "$INCREASE_HEADER$\n§GClick to increase the number of ships of this design to be used in this fleet§!\n§YShift-click§! to increase to the next multiple of 10, §YControl-click§! to add the maximum possible amount of ships"
+ DECREASE_FM:5 "$DECREASE_HEADER$\n§Gคลิกเพื่อลดจำนวนยานรบของการออกแบบนี้เพื่อใช้ในกองยานนี้§!\n§YShift-click§! เพื่อลดเป็นทวีคูณทีละ 10, §YControl-click§! เพื่อลบยานทั้งหมด"
+ INCREASE_FM:5 "$INCREASE_HEADER$\n§Gคลิกเพื่อเพิ่มจำนวนยานรบของการออกแบบนี้เพื่อใช้ในกองยานนี้§!\n§YShift-click§! เพื่อเพิ่มเป็นทวีคูณทีละ 10, §YControl-click§! เพื่อเพิ่มจำนวนยานรบที่เป็นไปค่าสูงสุด"
  REINFORCE_ALL_FM:1 "§Hเสริมกำลังทั้งหมด§!\n§Gคลิกเพื่อเสริมกองยานปัจจุบันทั้งหมดให้เต็มความจุ§!"
  ADD_DESIGN_FM:2 "§Hเพิ่มการออกแบบยานไปที่กองยาน§!\n§Gคลิกเพื่อเพิ่มการออกแบบยานใหม่ให้กับกองยานนี้§!"
  FLEET_VIEW_RALLY_TROOPS_TITLE:0 "§Hระดมพล§!"
@@ -599,7 +599,7 @@
  enclave_food_energy_trade_3_mut:0 "$enclave_mineral_trade_1_mut$"
  enclave_food_energy_trade_3_mut_desc:0 "$enclave_mineral_trade_1_mut_desc$"
  end_trade_3:0 "This will terminate our current resource trade deal with the Muutagans."
- leviathans.105.e:1 "We wish to end our resource trade deal."
+ leviathans.105.e:1 "เราต้องการที่จะยุติข้อตกลงการค้าทรัพยากรของเรา"
  leviathans.105.e.response:0 "Very well. We shall immediately transmit instructions to our freighters telling them to stand down and return to base.\n\nLet us know if you change your mind!"
  leviathans.171.name:1 "Energy Trade Canceled"
  leviathans.171.desc:1 "With our energy reserves depleted, we can no longer maintain our trade agreements that depended on this resource. All such agreements with Trader Enclaves have been canceled."
@@ -664,15 +664,15 @@
  irassian_minerals_desc:0 "Once a major anchorage of the Irassian Starfleet, the ruined naval yards that litter the orbit of this planet have deposited a wealth of mineral resources to its surface."
  irassian_energy:0 "Energy Production Site"
  irassian_energy_desc:0 "This gas giant served as the key energy production site of the Irassian Concordat in the early stages of its interstellar expansion. A dense belt of ancient orbital power stations still ring the planet."
- ARMIES_LOST:0 "War Exhaustion due to Army Losses"
- ARMIES_LOST_LONG:0 "$ATTR|R$ due to $ARMIES|R$ armies lost"
- SHIPS_LOST:0 "War Exhaustion due to Ship Losses"
- SHIPS_LOST_LONG:0 "$ATTR|R$ due to $SHIPS|R$ ships lost"
- WAROVERVIEW_BATTLE_OUR_SHIPS_LOST:0 "$NUM|R$ ships lost"
- WAROVERVIEW_BATTLE_OUR_ARMIES_LOST:0 "$NUM|R$ armies lost"
- WAROVERVIEW_BATTLE_THEIR_SHIPS_LOST:0 "$NUM|G$ ships lost"
- WAROVERVIEW_BATTLE_THEIR_ARMIES_LOST:0 "$NUM|G$ armies lost"
- OCCUPATION_SUMMARY:0 "Occupation"
- OCCUPATION_SUMMARY_LONG:0 "Occupation $ATTR|R$ due to $SYSTEMS|R$ occupied systems and $PLANETS|R$ occupied planets"
+ ARMIES_LOST:0 "ความอิดโรยจากการสูญเสียกองทัพบก"
+ ARMIES_LOST_LONG:0 "$ATTR|R$ เนื่องจากสูญเสียกองทัพบก $ARMIES|R$"
+ SHIPS_LOST:0 "ความอิดโรยจากการสูญเสียยาน"
+ SHIPS_LOST_LONG:0 "$ATTR|R$ เนื่องจากสูญเสียยาน $SHIPS|R$"
+ WAROVERVIEW_BATTLE_OUR_SHIPS_LOST:0 "สูญเสียยาน $NUM|R$"
+ WAROVERVIEW_BATTLE_OUR_ARMIES_LOST:0 "สูญเสียกองทัพบก $NUM|R$"
+ WAROVERVIEW_BATTLE_THEIR_SHIPS_LOST:0 "สูญเสียยาน $NUM|G$"
+ WAROVERVIEW_BATTLE_THEIR_ARMIES_LOST:0 "สูญเสียกองทัพบก $NUM|G$"
+ OCCUPATION_SUMMARY:0 "การยึดครอง"
+ OCCUPATION_SUMMARY_LONG:0 "การยึดครอง $ATTR|R$ เนื่องจากระบบดาวถูกยึด $SYSTEMS|R$ ระบบ และดาวเคราะห์ถูกยึด $PLANETS|R$ ดวง"
  FLEET_TEMPLATE_COMMAND_MAX_MULTIPLE:0 "การเพิ่มยาน $NUM|Y$ ลำ จะทำให้เกินขีดจำกัดคำสั่ง"
  FLEET_TEMPLATE_COMMAND_MIN_MULTIPLE:0 "Cannot remove $NUM|Y$ ships from the fleet template"
