--- a/mod/thmod/localisation/english/diplo_stances_l_english.yml
+++ b/mod/thmod/localisation/english/diplo_stances_l_english.yml
@@ -1,36 +1,36 @@
 ﻿l_english:
  DIPLOMACY_STANCE:0 "§Hจุดยืนทางการทูต§!"
- diplo_stance_belligerent:0 "เป็นปฏิปักษ์"
+ diplo_stance_belligerent:0 "กระหายสงคราม"
  diplo_stance_belligerent_name:0 "$diplo_stance_belligerent$"
- diplo_stance_belligerent_desc:0 "This empire will attempt to bully weaker empires into submission to their will.\n\n§E$influence_cost_for_improving_relations_effect$§!"
+ diplo_stance_belligerent_desc:0 "จักรวรรดินี้จะพยายามรังแกอาณาจักรที่อ่อนแอกว่าให้ยอมจำนนต่อความประสงค์ของพวกเขา\n\n§E$influence_cost_for_improving_relations_effect$§!"
  diplo_stance_cooperative:0 "ร่วมมือกัน"
  diplo_stance_cooperative_name:0 "$diplo_stance_cooperative$"
- diplo_stance_cooperative_desc:0 "This empire will attempt to find common ground and negotiate with other empires in the name of friendship.\n\n§E$influence_cost_for_harming_relations_effect$§!"
+ diplo_stance_cooperative_desc:0 "จักรวรรดินี้จะพยายามค้นหาจุดร่วมและเจรจากับจักรวรรดิอื่นในแบบมิตรภาพ\n\n§E$influence_cost_for_harming_relations_effect$§!"
  diplo_stance_isolationist:0 "แยกตัวออกจากชาติอื่นๆ"
  diplo_stance_isolationist_name:0 "$diplo_stance_isolationist$"
- diplo_stance_isolationist_desc:0 "This empire wishes to be left alone to their own affairs.\n\n§E$influence_cost_for_improving_or_harming_relations_effect$§!"
+ diplo_stance_isolationist_desc:0 "จักรวรรดินี้ต้องการอยู่ตามลำพังเพื่อกิจการของตนเอง\n\n§E$influence_cost_for_improving_or_harming_relations_effect$§!"
  diplo_stance_expansionist:0 "ขยายอาณาเขต"
  diplo_stance_expansionist_name:0 "$diplo_stance_expansionist$"
- diplo_stance_expansionist_desc:0 "This empire seeks to grow peacefully, but has no specific diplomatic focus.\n "
+ diplo_stance_expansionist_desc:0 "จักรวรรดินี้พยายามที่จะเติบโตอย่างสันติ แต่ไม่มีจุดมุ่งหมายทางการทูตที่เฉพาะเจาะจง\n "
  diplo_stance_supremacist:0 "ความยิ่งใหญ่มีอำนาจสูงสุด"
  diplo_stance_supremacist_name:0 "$diplo_stance_supremacist$"
  diplo_stance_supremacist_desc:0 "จักรวรรดินี้ต้องการให้ทุกคนยอมก้มหัวต่อหน้าพวกเขา\n\n§Rท่าทีทางการทูตนี้จะเป็นผลร้ายต่อความสัมพันธ์กับจักรวรรดิอื่นๆที่มีท่าทีทางการทูต §Y$diplo_stance_supremacist$§!§!\n\n§E$easy_rivalry$\n$influence_cost_for_improving_relations_effect$§!"
- triggered_opinion_diplo_stance_supremacy:0 "Both $diplo_stance_supremacist$"
+ triggered_opinion_diplo_stance_supremacy:0 "ทั้ง $diplo_stance_supremacist$"
  diplo_stance_animosity: "เป็นปฏิปักษ์"
  diplo_stance_animosity_name: "$diplo_stance_animosity$"
- diplo_stance_animosity_desc: "This empire wants to compete against all possible rivals.\n\n§RThis Diplomatic Stance will increase the Negative Opinion impact of being §YRivals§! by 100.§!\n\n§ERestrictions on the §YRival§! action against empires more powerful than us are removed.\n\n$easy_rivalry$§!\n"
+ diplo_stance_animosity_desc: "จักรวรรดินี้ต้องการแข่งขันกับคู่แข่งทั้งหมดที่เป็นไปได้\n\n§Rท่าทีทางการทูตนี้จะเพิ่มผลกระทบต่อทัศนคติเชิงลบของ §Yจักรวรรดิคู่แข่ง§! 100§!\n\n§Eข้อจำกัดในการดำเนินการของ §Yจักรวรรดิคู่แข่ง§! ต่อจักรวรรดิที่มีอำนาจมากกว่าเราจะถูกลบ\n\n$easy_rivalry$§!\n"
  diplo_stance_mercantile:0 "ค้าขาย"
  diplo_stance_mercantile_name:0 "$diplo_stance_mercantile$"
- diplo_stance_mercantile_desc:0 "This empire desires the facilitation of trade above all else.\n\n§E$influence_cost_for_close_borders$§! "
+ diplo_stance_mercantile_desc:0 "จักรวรรดินี้ต้องการการอำนวยความสะดวกทางการค้าเหนือสิ่งอื่นใด\n\n§E$influence_cost_for_close_borders$§! "
  diplo_stance_hunger:0 "ผู้หิวโหย"
  diplo_stance_hunger_name:0 "$diplo_stance_hunger$"
- diplo_stance_hunger_desc:0 "This empire hungers and consumes."
+ diplo_stance_hunger_desc:0 "จักรวรรดินี้มีความหิวโหยและกิน"
  diplo_stance_isolationist_swarm:0 "สงบนิ่ง"
  diplo_stance_isolationist_swarm_name:0 "$diplo_stance_isolationist_swarm$"
- diplo_stance_isolationist_swarm_desc:0 "This empire has entered a dormant state."
+ diplo_stance_isolationist_swarm_desc:0 "จักรวรรดินี้ได้เข้าสู่สภาวะสงบเงียบแล้ว"
  diplo_stance_extermination:0 "ทำลายล้างถอนรากถอนโคน"
  diplo_stance_extermination_name:0 "$diplo_stance_extermination$"
- diplo_stance_extermination_desc:0 "This empire's purpose is to destroy all biological life."
+ diplo_stance_extermination_desc:0 "จุดประสงค์ของจักรวรรดินี้คือการทำลายสิ่งมีชีวิตชีวภาพทั้งหมด"
  diplo_stance_isolationist_exterminators:0 "กำลังประมวลผลหรือคอมไพล์ใหม่"
  diplo_stance_isolationist_exterminators_name:0 "$diplo_stance_isolationist_exterminators$"
  diplo_stance_isolationist_exterminators_desc:0 "จักรวรรดินี้ได้เข้าสู่สภาวะที่หยุดครุ่นคิดชั่วคราวและประเมินจุดประสงค์ของพวกเขาอีกครั้ง"
