--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -683,8 +683,8 @@
  living_planet_chain_desc:3 "Preliminary reports suggest the ocean covering §Y[From.GetName]§! is somehow alive, comprising an alien entity unlike any we've encountered before.\n\nWe should establish a low-orbit research outpost to study the living sea. Updates are to be expected."
  ketling_study_chain_title:0 "Ketling Origins"
  ketling_study_chain_desc:0 "Studying the strange sapients that live in tunnels in the junk heaps of three linked systems might yield insight into the lost interstellar civilization that once ruled these worlds."
- opinion_stole_supplies:0 "Stole Wreckage Cargo"
- opinion_returned_supplies:0 "Returned Wreckage Cargo"
+ opinion_stole_supplies:0 "ขโมยซากสินค้า"
+ opinion_returned_supplies:0 "ส่งคืนซากสินค้า"
  frozen_in_time:0 "Frozen in Time"
  frozen_in_time_desc:0 "There are remnants of a lost civilization on this planet, snuffed out like a candle when solar superflares depleted the planet's atmosphere."
  superflare_star:0 "Superflares"
