--- a/mod/thmod/localisation/english/events_2_l_english.yml
+++ b/mod/thmod/localisation/english/events_2_l_english.yml
@@ -1276,14 +1276,14 @@
  pheromonefrenzy.revived.tooltip:0 "Your former colony has changed into a desert planet, and can be colonized with the right technology."
  colony.1534.name:0 "Mharin Kharin: Pistil Pondering"
  colony.1534.desc:0 "On closer examination, the plants native to [Root.GetName] turn out to be rather dull. Some excrete pollen that have a mild stimulating effect and they are likely to have a propensity for rapid genetic change; hardly impressive enough to warrant adopting as a strategic or luxury resource."
- communications_spread.1.name:0 "Communications Intercepted"
+ communications_spread.1.name:0 "การสื่อสารถูกสกัดกั้น"
  communications_spread.1.desc:1 "By intercepting a message sent to the [CommSpreader.GetName], we have learned that they are in regular contact with another spacefaring empire that we ourselves have no contact with. By tracing this message to its source, we have been able to establish our own line of communications with this previously unknown actor on the galactic stage."
  communications_spread.1.a:0 "น่าสนใจ..."
- communications_spread.1.tooltip:1 "Establishes communications with the [contact_empire.GetName]."
- communications_spread.2.name:0 "New Contact"
+ communications_spread.1.tooltip:1 "สร้างการสื่อสารกับ [contact_empire.GetName]"
+ communications_spread.2.name:0 "การติดต่อใหม่"
  communications_spread.2.desc:2 "We have received a communiqué from a previously unknown spacefaring empire that call themselves the §H[From.GetName]§!. They claim to have learned of our existence by listening in on the communications of another empire we are in contact with."
  communications_spread.2.a:0 "น่าสนใจ..."
- communications_spread.2.tooltip:0 "Establishes communications with the [From.GetName]."
+ communications_spread.2.tooltip:0 "สร้างการสื่อสารกับ [From.GetName]"
  fallen_empires.2.name:0 "[From.GetName] assassinate [Root.GetRulerTitle]!"
  fallen_empires.2.desc:1 "As if to punish us for not only warring with the Stagnant Ascendancy of the [From.GetName] but for then accepting defeat, [From.GetAdj] agents appeared by [Root.GetRulerTitle] [rulername.GetName]'s side after the peace negotiations concluded.\n\nThey dispatched our [Root.GetRulerTitle] with unseen weaponry and practiced brutality before melting away as if they were never there."
  fallen_empires.2.a:0 "We are defeated and humiliated, but will rise again."
