--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -350,10 +350,10 @@
  action.38.message:1 "We have lost the war against the §H[From.GetName]§!"
  action.38.desc.default:1 "This war is over. We are victorious."
  action.38.a:1 "The worst possible outcome."
- action.39.name:1 "Status Quo Peace with the §H[From.GetName]§!"
+ action.39.name:1 "สนธิสัญญาสันติภาพกับ §H[From.GetName]§!"
  action.39.message:1 "We have signed a white peace in the war against the §H[From.GetName]§!"
  action.39.desc.default:1 "This war is over. There can be no victor this time."
- action.39.a:1 "We will accept this for now."
+ action.39.a:1 "เราจะยอมรับสิ่งนี้ ในตอนนี้"
  action.37.desc.hw:1 "Whether by honorable or dishonorable means, you have defeated us in combat. Claim your spoils and rue the day of our return."
  action.37.desc.rc:2 "We appear to have underestimated your net value, [Root.GetSpeciesNamePlural]. Rest assured, it will not happen again."
  action.37.desc.pt:1 "Your constant terror has forced us to concede. May our enterprises never be plagued by a conflict like this again."
@@ -1385,11 +1385,11 @@
  CYBREX_ARTIFACT_FOUND:0 "Signs of Cybrex Activity"
  CYBREX_ARTIFACT_FOUND_DESC:0 "We have learned that there may have been Precursor activity on §H[precursor_planet.GetName]§! at some point in the galactic past. The sphere of influence of the ancient Cybrex is known to have extended to this region of space, making this world a promising lead in our ongoing efforts to learn more about their civilization."
  new_precursor_project:0 "A new archaeological special project is available on §L[precursor_planet.GetName]§!."
- precursor.310.name:0 "Private Collector"
+ precursor.310.name:0 "นักสะสมของโบราณ"
  precursor.310.desc:0 "A private collector on [collector_home.GetName] has somehow come into ownership of an ancient Precursor artifact believed to be [Root.GetPrecursorCiv] in origin. Despite government pressure, the collector has so far been reluctant to part with it."
- precursor.310.a:0 "Everyone has a price."
- precursor.310.b:0 "It belongs in a museum!"
- precursor.310.c:0 "Let the collector keep it."
+ precursor.310.a:0 "ทุกคนสามารถซื้อได้ด้วยเงิน"
+ precursor.310.b:0 "มันจะอยู่ในพิพิธภัณฑ์!"
+ precursor.310.c:0 "ให้นักสะสมเก็บไว้"
  buy_precursor_artifact:0 "Buy the artifact for an exorbitant sum.\n\n"
  seize_precursor_artifact:0 "Declare the artifact to be state property and have it seized by the local authorities.\n\n"
  leave_precursor_artifact:0 "Leave the artifact in the collector's care."
