--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -104,7 +104,7 @@
  hire_general_merc:0 "\nคุณจ้างพลเอกผู้เชี่ยวชาญ [marauder_species.GetName] แบบถาวร"
  marauder.30.e:0 "ไม่มีอะไร"
  marauder.30.f:0 "ลาก่อน"
- marauder.31.1.desc:0 "Ha! So you would have us raid one of your rivals?\n\nWe are loathe to get involved in your petty disputes, but with the proper incentives, I suppose it could be arranged...\n\nWho is it that you want us to attack?"
+ marauder.31.1.desc:0 "Ha! คุณจะให้เราโจมตีหนึ่งในคู่แข่งของคุณเหรอ?\n\nเราไม่ชอบที่จะเข้าไปพัวพันกับข้อพิพาทเล็กๆน้อยๆของพวกคุณหรอกนะ แต่ถ้ามีแรงจูงใจที่เหมาะสม คิดว่าเราก็น่าจะจัดการได้นะ...\n\nบอกมา ใครคือคนที่คุณต้องการให้เราโจมตี?"
  marauder.31.2.desc:0 "You... you want us to smash one of your dwamak rivals? Yes, it can be done...\n\nBut which dwamak to smash?"
  marauder.31.3.desc:0 "In exchange for tribute, we could perhaps be convinced to smite a particular group of unbelievers.\n\nWho are these heretics you would have us deal with?"
  marauder.31.a:0 "§Y[raid_target_1.GetName]§!"
@@ -116,11 +116,11 @@
  marauder.32.1.desc:0 "The [preliminary_target.GetName] does indeed look like a ripe target for our warriors. Perhaps a visit is in order..."
  marauder.32.2.desc:0 "Yes, [preliminary_target.GetName] would make good dwamak-stew. Very good. But it is much effort..."
  marauder.32.3.desc:0 "She of the Void does not look kindly on the heathens of the [preliminary_target.GetName]. A military expedition might serve Her will..."
- marauder.32.a:0 "We'll pay. Teach them a lesson."
+ marauder.32.a:0 "เราจะจ่าย สอนบทเรียนให้พวกเขาจดจำ"
  marauder.32.1.a.response:0 "Then it is settled. We ride at dawn."
  marauder.32.2.a.response:0 "HYEEEEIIIEEEEE!!!!!! These dwamaks are in for bash-bash!"
  marauder.32.3.a.response:0 "They shall taste Her fury."
- hire_raid:0 "\nThe [current_marauder_diplomacy.GetName] assemble a raiding fleet that will attack the [preliminary_target.GetName]."
+ hire_raid:0 "\n[current_marauder_diplomacy.GetName] รวมกองยานเพื่อโจมตี [preliminary_target.GetName]"
  marauder.34.1.desc:0 "[marauder_country_1.GetSpeciesName] mercenaries are the finest in the entire galaxy. Do not let their rowdy nature deceive you - when battle is joined, their discipline is second to none. Their honor would even compel them to fight against other [marauder_country_1.GetSpeciesNamePlural], should you wish it.\n\nThese are the fleets that are currently available for hire."
  marauder.34.2.desc:0 "Even [marauder_country_2.GetSpeciesName] infants can defeat bestest dwamak warriors. HYEEIIEE!!!! It is known.\n\nBut these not infants!!! These hardened [marauder_country_2.GetSpeciesName] mercenaries, and they be not only dangerous, but they be DERANGED! They willing to fight for dwamaks like YOU, against other dwamaks or even [marauder_country_2.GetSpeciesNamePlural]... if you pay!\n\nHere current list of crazy [marauder_country_2.GetSpeciesName] fleets:"
  marauder.34.3.desc:0 "There are several cults among our warriors who feel that killing unbelievers, even at the behest of other unbelievers, aligns with Her will. They will not even shrink away from killing other [marauder_country_3.GetSpeciesNamePlural], since these radicals see everyone but themselves as heretics.\n\nNot to worry, though. They are not foolish enough to attack their employer. Incidentally, I too am safe from their wrath, since I bring them work in exchange for a modest cut of their profits.\n\nThese are the fleets currently available for hire:"
