--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -40,8 +40,8 @@
  MESSAGE_UPGRADE_DONE:0 "กองยาน $FLEET|Y$ ได้รับการอัปเกรดเสร็จสมบูรณ์"
  MESSAGE_EMERGENCY_FTL_CASUALTIES_TITLE:0 "ความเสียหายจากการเดินทางเร็วกว่าแสงแบบฉุกเฉิน"
  EMERGENCY_FTL_CASUALTIES_DESC:1 "กองยานได้รับความเสียหาย\n\nยานสูญหาย: $LOST$\nยานพังเสียหาย: $NEAR_LOST$"
- RIVALRY_INVALID_TITLE:0 "Rivalry Invalidated"
- RIVALRY_INVALID_DESC:0 "$COUNTRY|Y$ is no longer a valid rival for our empire"
+ RIVALRY_INVALID_TITLE:0 "ไม่มีการแข่งขันอีกต่อไป"
+ RIVALRY_INVALID_DESC:0 "$COUNTRY|Y$ ไม่ใช่คู่แข่งของจักรวรรดิเราอีกต่อไป"
  MESSAGE_MADE_FIRST_CONTACT_WE:0 "We have encountered the §H$WHO$§! in the §H$STAR$§! system!"
  MESSAGE_MADE_FIRST_CONTACT_THEM:0 "Contact has been established with the §H$WHO$§! in the §H$STAR$§! system!"
  ACTION_DECLARE_WAR_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! war declaration vote has passed, and we are now §Yat war§! with the §H[Recipient.GetName]§!!"
@@ -50,8 +50,8 @@
  ACTION_INVITE_TO_ALLIANCE_VOTE_FAILED:0 "The vote to invite §H[Recipient.GetName]§! into the §H[Actor.GetAllianceName]§! failed."
  ACTION_KICK_FROM_ALLIANCE_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to kick §H[Recipient.GetName]§! from the Alliance."
  ACTION_KICK_FROM_ALLIANCE_VOTE_FAILED:0 "The vote to kick §H[Recipient.GetName]§! from the §H[Actor.GetAllianceName]§! failed."
- ACTION_KICK_FROM_FEDERATION_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to kick §H[Recipient.GetName]§! from the Federation."
- ACTION_KICK_FROM_FEDERATION_VOTE_FAILED:0 "The vote to kick §H[Recipient.GetName]§! from the §H[Actor.GetAllianceName]§! failed."
+ ACTION_KICK_FROM_FEDERATION_VOTE_PASSED:0 "§H[Actor.GetAllianceName]§! โหวตให้ขับ §H[Recipient.GetName]§! ออกจากสหพันธ์"
+ ACTION_KICK_FROM_FEDERATION_VOTE_FAILED:0 "การโหวตให้ขับ §H[Recipient.GetName]§! ออกจากสหพันธ์ §H[Actor.GetAllianceName]§! ไม่สำเร็จ"
  ACTION_INVITE_TO_FEDERATION_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to invite §H[Recipient.GetName]§! into the Federation."
  ACTION_INVITE_TO_FEDERATION_VOTE_FAILED:0 "The vote to invite §H[Recipient.GetName]§! into the §H[Actor.GetAllianceName]§! failed."
  ACTION_ASK_TO_JOIN_ALLIANCE_VOTE_PASSED:0 "The §H[Recipient.GetAllianceName]§! voted to invite §H[Actor.GetName]§! into the Alliance."
@@ -85,7 +85,7 @@
  ACTION_PROPOSE_INVITE_PROPOSAL_FAILED_ALLIANCE:0 "The invitation proposal from §H[Actor.GetName]§! on §H[Third_party.GetName]§! was declined."
  ACTION_PROPOSE_INVITE_PROPOSAL_FAILED_RECIPIENT:1 "The invitation proposal from §H[Actor.GetName]§! on §H[Third_party.GetName]§! timed out and was auto-declined."
  ACTION_OFFER_PEACE_PROPOSAL_FAILED_ACTOR:1 "Our peace offer to §H[Recipient.GetName]§! timed out and was auto-declined."
- ACTION_OFFER_PEACE_PROPOSAL_FAILED_RECIPIENT:1 "The peace offer from §H[Actor.GetName]§! timed out and was auto-declined."
+ ACTION_OFFER_PEACE_PROPOSAL_FAILED_RECIPIENT:1 "ข้อเสนอสันติภาพจาก §H[Actor.GetName]§! หมดเวลาและถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_OFFER_PEACE_DIPLOMACY_VIEW_PROPOSAL_FAILED_ACTOR:0 "$ACTION_OFFER_PEACE_PROPOSAL_FAILED_ACTOR$"
  ACTION_OFFER_PEACE_DIPLOMACY_VIEW_PROPOSAL_FAILED_RECIPIENT:0 "$ACTION_OFFER_PEACE_PROPOSAL_FAILED_RECIPIENT$"
  ACTION_MAKE_CLAIMS_DIPLOMACY_VIEW_PROPOSAL_FAILED_ACTOR:0 "Our attempt to make claims on §H[Recipient.GetName]§! timed out and was auto-declined."
@@ -106,7 +106,7 @@
  ACTION_INVITE_TO_ALLIANCE_PROPOSAL_FAILED_RECIPIENT:1 "คำเชิญให้เข้าร่วมเป็นพันธมิตรจาก §H[Actor.GetName]§! หมดเวลาแล้วและจะถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_KICK_FROM_ALLIANCE_PROPOSAL_FAILED_ACTOR:0 "Our proposal to kick §H[Recipient.GetName]§! from the Alliance was declined."
  ACTION_KICK_FROM_ALLIANCE_PROPOSAL_FAILED_RECIPIENT:1 "ข้อเสนอจาก §H[Actor.GetName]§! ที่ขับเราออกจากพันธมิตร หมดเวลาแล้วและจะถูกปฏิเสธโดยอัตโนมัติ"
- ACTION_KICK_FROM_FEDERATION_PROPOSAL_FAILED_ACTOR:0 "Our proposal to kick §H[Recipient.GetName]§! from the Federation was declined."
+ ACTION_KICK_FROM_FEDERATION_PROPOSAL_FAILED_ACTOR:0 "ข้อเสนอของเราที่จะขับ §H[Recipient.GetName]§! ออกจากสหพันธ์ถูกปัดตก"
  ACTION_KICK_FROM_FEDERATION_PROPOSAL_FAILED_RECIPIENT:1 "ข้อเสนอจาก §H[Actor.GetName]§! ที่ขับเราออกจากสหพันธ์ หมดเวลาแล้วและจะถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_INVITE_TO_FEDERATION_PROPOSAL_FAILED_ACTOR:0 "Our invite to §H[Recipient.GetName]§! to join the Alliance was declined."
  ACTION_INVITE_TO_FEDERATION_PROPOSAL_FAILED_RECIPIENT:1 "คำเชิญให้เข้าร่วมเป็นพันธมิตรจาก §H[Actor.GetName]§! หมดเวลาแล้วและจะถูกปฏิเสธโดยอัตโนมัติ"
@@ -149,7 +149,7 @@
  MESSAGE_OFFER_PEACE_TITLE:0 "ข้อเสนอสงบศึก"
  MESSAGE_INVITE_TO_ALLIANCE_TITLE:0 "Alliance Invitation"
  MESSAGE_KICK_FROM_ALLIANCE_TITLE:0 "Alliance Member Kicked"
- MESSAGE_KICK_FROM_FEDERATION_TITLE:0 "Federation Member Kicked"
+ MESSAGE_KICK_FROM_FEDERATION_TITLE:0 "สมาชิกถูกขับออกจากสหพันธ์"
  MESSAGE_ASK_TO_JOIN_ALLIANCE_TITLE:0 "Join Alliance Request"
  MESSAGE_LEAVE_ALLIANCE_TITLE:0 "สมาชิกพันธมิตรออก"
  DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
@@ -208,7 +208,7 @@
  ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! เข้าร่วมกับ §H[Root.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_ASK_TO_LEAVE_FEDERATION_NOTIFICATION:0 "$ACTION_LEAVE_FEDERATION_NOTIFICATION$"
  ACTION_LEAVE_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! left the §H[Root.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
- ACTION_KICK_FROM_FEDERATION_NOTIFICATION:1 "The §H[From.GetAllianceName]§! voted to kick §H[Root.GetName]§! from the Federation."
+ ACTION_KICK_FROM_FEDERATION_NOTIFICATION:1 "§H[From.GetAllianceName]§! โหวตให้ขับ §H[Root.GetName]§! ออกจากสหพันธ์"
  ACTION_ASK_TO_BE_RELEASED_SUBJECT_NOTIFICATION:2 "§H[Root.GetName]§! gave independence to §H[From.GetName]§!.\n\nIt seems they were too weak to maintain control of their subject."
  ACTION_RELEASE_SUBJECT_NOTIFICATION:2 "§H[From.GetName]§! gave independence to §H[Root.GetName]§!.\n\nIt seems they were too weak to maintain control of their subject."
  ACTION_INSULT_NOTIFICATION:2 "§H[From.GetName]§! insulted §H[Root.GetName]§!.\n\nIt seems that conflict is brewing..."
