--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -126,7 +126,7 @@
  MOD_COUNTRY_COMMUNITY_GDF_NAVAL_CAPACITY_ADD:0 "Community Fleet Naval Capacity"
  MOD_COUNTRY_COMMUNITY_GDF_NAVAL_CAPACITY_ADD_DESC:0 "Modifies the Naval Capacity of the Galactic Defense Force and Imperial Armada"
  MOD_FIRST_CONTACT_SPEED_MULT:0 "ความเร็วในการค้นพบการติดต่อแรก"
- MOD_FIRST_CONTACT_CLUES_ADD:0 "First Contact Skill"
+ MOD_FIRST_CONTACT_CLUES_ADD:0 "สกิลการติดต่อครั้งแรก"
  MOD_FIRST_CONTACT_DEFENSE_ADD:0 "ความยากในการติดต่อครั้งแรกของเป้าหมาย"
  MOD_INTEL_GAIN_SPEED:0 "Speed of Intel Gain on Other Empires"
  MOD_COUNTER_INTEL_GAIN_SPEED:1 "Speed of Other Empires' Intel Gain on You"
@@ -317,8 +317,8 @@
  MOD_SHIP_SCIENCE_SURVEY_SPEED:0 "ความเร็วในการสำรวจ"
  MOD_SHIP_TRACKING_ADD:0 "การติดตามเป้าหมาย"
  MOD_SHIP_TRACKING_MULT:0 "การติดตามเป้าหมาย"
- MOD_SHIP_STARTING_EXPERIENCE_ADD:0 "ค่าประสบการณ์การยานเริ่มต้น"
- MOD_SHIP_EXPERIENCE_GAIN_MULT:0 "ได้ค่าประสบการณ์การยาน"
+ MOD_SHIP_STARTING_EXPERIENCE_ADD:0 "ค่าประสบการณ์ยานเริ่มต้น"
+ MOD_SHIP_EXPERIENCE_GAIN_MULT:0 "ได้ค่าประสบการณ์ยาน"
  MOD_SHIP_JUMPDRIVE_COOLDOWN_MULT:0 "เวลาคูลดาวน์การขับเคลื่อนแบบจั้มไดร์ฟ"
  MOD_SHIP_NAVAL_CAP_USAGE_ADD:0 "Naval Cap Usage"
  MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
