--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -129,13 +129,13 @@
  INTEL_CATEGORY_INFO_BREAKDOWN:1 "§Hข้อมูลที่มี:§!\n$BREAKDOWN$"
  INTEL_CATEGORY_TITLE:0 "ข้อมูล$CATEGORY$"
  FC_RELATION_LABEL_UNKNOWN:0 "ไม่ทราบ"
- FC_RELATION_LABEL_ISOLATIONIST:0 "Isolationist"
- FC_RELATION_LABEL_RECEPTIVE:0 "Receptive"
+ FC_RELATION_LABEL_ISOLATIONIST:0 "อยู่โดดเดี่ยว"
+ FC_RELATION_LABEL_RECEPTIVE:0 "เปิดกว้าง"
  FC_RELATION_LABEL_HOSTILE:0 "ศัตรู"
- FC_RELATION_DESC_UNKNOWN:0 "We do not yet know how these aliens will respond to our Contact."
- FC_RELATION_DESC_ISOLATIONIST:0 "These aliens would prefer to be left alone. Perhaps that is for the best."
- FC_RELATION_DESC_RECEPTIVE:0 "These aliens appear eager to open peaceful communications with us."
- FC_RELATION_DESC_HOSTILE:0 "These aliens are taking a hostile stance. Tread with caution."
+ FC_RELATION_DESC_UNKNOWN:0 "เรายังไม่รู้ว่าต่างดาวเหล่านี้จะตอบสนองต่อการติดต่อของเราอย่างไร"
+ FC_RELATION_DESC_ISOLATIONIST:0 "ต่างดาวเหล่านี้ต้องการอยู่ตามลำพัง บางทีนั่นอาจเป็นสิ่งที่ดีที่สุด"
+ FC_RELATION_DESC_RECEPTIVE:0 "ต่างดาวเหล่านี้กระตือรือร้นที่จะเปิดการสื่อสารอย่างสันติกับเรา"
+ FC_RELATION_DESC_HOSTILE:0 "ต่างดาวเหล่านี้มีท่าทางที่ไม่เป็นมิตร ควรระมัดระวัง"
  PACT_communications:0 "การติดต่อสื่อสาร"
  PACT_guarantee_independence:0 "รับรองความเป็นเอกราช"
  PACT_non_aggression_pact:0 "สนธิสัญญาไม่รุกราน"
@@ -160,7 +160,7 @@
  FIRST_CONTACT_ROLL_CHANCE_TT:0 "There is a §Y$CHANCE|0$%§! chance that the current phase will end in §Gsuccess§!.\n\nThe phase has a $INSIGHT_CHANCE|%0Y$ chance of granting §YInsights§!, which increase the chance of future phases' success."
  FIRST_CONTACT_INSIGHTS_NEEDED_TT:1 "We need $INSIGHTS|0Y$ more §YInsights§! before we will have a chance at succeeding this phase of the investigation."
  FIRST_CONTACT_CURRENT_SCORE_AND_HEADER:0 "The current score before dice roll is $SCORE|0Y$.\n\n§ERoll Outcomes:§!"
- FIRST_CONTACT_ON_ROLL_FAILED_RANGE:0 "($CHANCE|%0Y$) Result is between $MIN|0Y$ and $MAX|0Y$. Adds $CLUES|0Y$ insight(s)."
+ FIRST_CONTACT_ON_ROLL_FAILED_RANGE:0 "($CHANCE|%0Y$) ผลลัพธ์อยู่ระหว่าง $MIN|0Y$ และ $MAX|0Y$ เพิ่มข้อมูลเชิงลึก $CLUES|0Y$"
  FIRST_CONTACT_ON_ROLL_FAILED_GREATER_THAN_EQ:1 "(§Y$CHANCE|0$%§!) Result is $MIN|0Y$ or greater. Finishes chapter."
  FIRST_CONTACT_ON_ROLL_FAILED_LESS_THAN_EQ:1 "($CHANCE|%0Y$) Result is $MAX|0Y$ or less. Adds §Y0§! insights."
  FC_LEADER_BONUS:0 "โบนัสสกิล"
@@ -178,7 +178,7 @@
  FIRST_CONTACT_SITE_LOCKED:0 "ล็อกการตรวจสอบการติดต่อแรก"
  FC_GO_TO:0 "§HGo To§!\n§GClick to quickly navigate the camera to where this first contact investigation is located§!"
  FIRST_CONTACT_SITE_CHALLENGE:0 "§HChallenge§!\nThis represents how challenging the investigation is, relative to the level of the currently assigned Envoy."
- ADD_FC_STAGE_CLUES_EFFECT:2 "Adds $CLUES|Y$ insight(s)"
+ ADD_FC_STAGE_CLUES_EFFECT:2 "เพิ่มข้อมูลเชิงลึก $CLUES|Y$"
  IS_NOT_FIRST_CONTACT_SITE_CLUES_TRIGGER:0 "Investigation insights NOT $COMPARE$ $NUM_COMPARE$"
  IS_FIRST_CONTACT_SITE_CLUES_TRIGGER:0 "Investigation insights $COMPARE$ $NUM_COMPARE$"
  FC_SPECIES:0 "เผ่าพันธุ์"
@@ -244,7 +244,7 @@
  action.1.desc_hostile_to_homicidal_05:0 "Your hostility is unfortunate. We had considered sparing you, being fellow [Root.GetSpeciesNamePlural] as you are, but it seems you will need to be... re-educated, at the very least."
  first_contact_start_title:1 "$first_contact.1.name$"
  first_contact.1.name:0 "การเผชิญหน้ากันที่ [This.System.GetName]"
- first_contact.1.desc.base:1 "เราได้ติดต่อกับเอเลี่ยนลึกลับในระบบดาว §H[This.System.GetName]§! เป็นครั้งแรก สำหรับตอนนี้เราจะตั้งชื่อพวกเขาว่า §H[This.ContactCountry.GetName]§! จนกว่าเราจะสามารถหาข้อมูลเพิ่มเติมเกี่ยวกับพวกเขาได้"
+ first_contact.1.desc.base:1 "เราได้ติดต่อกับเอเลี่ยนลึกลับในระบบดาว §H[This.System.GetName]§! เป็นครั้งแรก สำหรับตอนนี้ เราจะตั้งชื่อพวกเขาว่า §H[This.ContactCountry.GetName]§! จนกว่าเราจะสามารถหาข้อมูลเพิ่มเติม เกี่ยวกับพวกเขาได้"
  first_contact.1.desc.default:0 "$first_contact.1.desc.base$ หากพวกเขามีภาษา เราต้องถอดรหัสเพื่อสร้างการติดต่อสื่อสาร"
  first_contact.1.desc.xenophobe:0 "$first_contact.1.desc.base$ หากพวกเขามีภาษา เราควรถอดรหัสเพื่อให้เราสามารถประเมินได้ว่า พวกเขาเป็นภัยคุกคามมากแค่ไหน"
  first_contact.1.desc.terminator:1 "We have made first contact with unknown aliens in the §H[This.System.GetName]§! system. We must determine whether they are organic with all haste so that their termination can be scheduled, should it prove necessary. For now, they have been given the designation §H[This.ContactCountry.GetName]§!."
@@ -568,7 +568,7 @@
  first_contact.365.desc:0 "The noises - a mixture of threatening booming noises and what sounds like the §Hgrinding§! of metal on metal - continued unabated for several minutes, punctuated occasionally by a §Hhowling§! noise that sent a §Hchill§! through everyone who heard it.\n\nJust as [This.Owner.GetEnvoy] §H[This.Leader.GetName]§! thought the noises had died down, they started up again, louder than before. With a wince, [This.Leader.GetSheHe] switched the receiver off. [This.Leader.GetSheHeCap] turned to the gathered crowd of officers, some of whom were cowering behind their seats.\n"Well, that was quite something..." [This.Leader.GetSheHe] said weakly.\n\nIt is hard to imagine that a species making the noises we have picked up from the §H[This.ContactCountry.GetName]§! could be anything other than hostile. Naval officers already fear the worst and assume we will soon be at war with them, but calmer heads suggest we'd be better off waiting and seeing."
  first_contact.365.A:0 "They cannot help how they sound. We will come to understand them later."
  first_contact.365.B:0 "It is a challenge. Send threatening noises back!"
- first_contact.365.B.tooltip:0 "Is it impossible to predict how the §Y[This.ContactCountry.GetName]§! will react to this.\n"
+ first_contact.365.B.tooltip:0 "เป็นไปไม่ได้ที่จะคาดเดาว่า §Y[This.ContactCountry.GetName]§! จะตอบสนองเรื่องนี้อย่างไร\n"
  first_contact.365.C:0 "Prepare for war."
  first_contact.365.C.pacifist:0 "We must prepare for the inevitable."
  first_contact.365.C.tooltip:0 "We will make no hostile moves, but we will be ready should they attack."
