--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -17,7 +17,7 @@
  LOYALTY_MONTHLY_CHANGE_COUNTRY:0 "ฐาน: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_HOLDINGS:0 "การถือครอง: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_INTEGRATION:0 "Subject integration: $VAL|=+$"
- LOYALTY_MONTHLY_CHANGE_OPINION:0 "Subject opinion: $VAL|=+$"
+ LOYALTY_MONTHLY_CHANGE_OPINION:0 "ทัศนคติของบริวาร: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_RESOURCE_CONTRIBUTION:0 "การสนับสนุนทรัพยากร: $VAL|=+$"
  LOYALTY_MONTHLY_CHANGE_ONE_RESOURCE:0 "$NAME$: $VAL|=+$"
  ACCEPTANCE_FROM_LOYALTY:0 "From Loyalty Change"
