--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -845,7 +845,7 @@
  leader_trait_refinement_focus_desc:0 "This leader has a keen understanding of refining processes, which allows them to oversee these facilities efficiently."
  leader_trait_refinement_focus_2:0 "$leader_trait_refinement_focus$ II"
  leader_trait_refinement_focus_desc_2:0 "$leader_trait_refinement_focus_desc$"
- only_one_governor_focus:0 "\n§YOnly one Governor focus can be selected.§!"
+ only_one_governor_focus:0 "\n§Yสามารถเลือกโฟกัสผู้ว่าการได้เพียงอย่างเดียวเท่านั้น§!"
  leader_trait_polluter:0 "ผู้ก่อมลพิษ"
  leader_trait_polluter_desc:1 "This leader's blatant disregard for the environment worsens living conditions on the planet."
  leader_trait_sadistic:2 "โหดร้ายทารุณ"
@@ -905,12 +905,12 @@
  leader_trait_observant_2_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$โอกาสค้นพบแหล่งวิจัย: §G+10%§!"
  leader_trait_slippery:1 "นักหลบเลี่ยง"
  leader_trait_slippery_desc:1 "Exploring the unknown is a dangerous task. This leader upgraded [Root.GetHisHer] ship with additional fail-safe systems and automatic FTL-disengagement protocols."
- leader_trait_collective_wisdom:0 "Collective Wisdom"
+ leader_trait_collective_wisdom:0 "กลุ่มผู้มีความรอบรู้"
  leader_trait_collective_wisdom_desc:1 "This leader maintains a close council with [Root.GetHisHer] crew, boosting morale and insights into unknown phenomena."
- leader_trait_collective_wisdom_effect:0 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Finishing any Special Project:\n$tt$£unity£ $unity$: §G+150§!"
+ leader_trait_collective_wisdom_effect:0 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นโครงการพิเศษ:\n$tt$£unity£ $unity$: §G+150§!"
  leader_trait_collective_wisdom_2:0 "$leader_trait_collective_wisdom$ II"
  leader_trait_collective_wisdom_2_desc:0 "$leader_trait_collective_wisdom_desc$"
- leader_trait_collective_wisdom_2_effect:0 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Finishing any Special Project:\n$tt$£unity£ $unity$: §G+300§!"
+ leader_trait_collective_wisdom_2_effect:0 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นโครงการพิเศษ:\n$tt$£unity£ $unity$: §G+300§!"
  leader_trait_tuner:1 "จูนเนอร์"
  leader_trait_tuner_desc:1 "By investing in top-of-the-line upgrades for civilian vessel engines, this leader managed to improve their vessel's cruising speed."
  leader_trait_tuner_2:0 "$leader_trait_tuner$ II"
