--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -163,7 +163,7 @@
  IMPERIALIST_PHILOSOPHY_DESC:2 "Failing to allow for offensive warfare will displease the [Root.GetName]."
  IMPERIALIST_NO_PHILOSOPHY:0 "$IMPERIALIST_PHILOSOPHY$"
  IMPERIALIST_CONQUEST:2 "การพิชิต"
- IMPERIALIST_CONQUEST_DESC:1 "Conquering alien planets will please the [Root.GetName] for a time."
+ IMPERIALIST_CONQUEST_DESC:1 "การพิชิตดาวเคราะห์ต่างดาวจะทำให้ [Root.GetName] พอใจชั่วระยะเวลาหนึ่ง"
  IMPERIALIST_NO_CONQUEST:0 "$IMPERIALIST_CONQUEST$"
  IMPERIALIST_FRONTIER_OUTPOSTS:0 "Border Expansion"
  IMPERIALIST_FRONTIER_OUTPOSTS_DESC:1 "Constructing a §YFrontier Outpost§! to expand our territory will please the [Root.GetName] for a time."
@@ -207,9 +207,9 @@
  IMPERIALIST_FEDERATION:0 "$military_federation$"
  IMPERIALIST_FEDERATION_NOT_MILITARIST:0 "$military_federation$"
  IMPERIALIST_FEDERATION_DESC:0 "Being a member of a $military_federation$ will please the [Root.GetName]."
- IMPERIALIST_FLEET_USAGE_HIGH:0 "High Naval Capacity Usage"
+ IMPERIALIST_FLEET_USAGE_HIGH:0 "ใช้ความจุกองยานสูง"
  IMPERIALIST_FLEET_USAGE_NOT_HIGH:0 "$IMPERIALIST_FLEET_USAGE_HIGH$"
- IMPERIALIST_FLEET_USAGE_HIGH_DESC:0 "Building our fleet out to our empire's capacity will please the [Root.GetName]."
+ IMPERIALIST_FLEET_USAGE_HIGH_DESC:0 "การสร้างกองยานให้เต็มความจุของจักรวรรดิจะทำให้ [Root.GetName] พอใจ"
  IMPERIALIST_FLEET_USAGE_LOW:0 "ใช้ยานที่ต่ำกว่าขีดความสามารถ"
  IMPERIALIST_FLEET_USAGE_NOT_LOW:0 "$IMPERIALIST_FLEET_USAGE_LOW$"
  IMPERIALIST_FLEET_USAGE_LOW_DESC:0 "การบำรุงรักษากองยานที่ต่ำกว่าขีดความสามารถของจักรวรรดิเราจะทำให้ [Root.GetName] ไม่พอใจอย่างมาก"
