--- a/mod/thmod/localisation/english/projects_3_l_english.yml
+++ b/mod/thmod/localisation/english/projects_3_l_english.yml
@@ -11,7 +11,7 @@
  MINING_GEAR_PROJECT_DESC:0 "An ancient excavator is digging deep into a giant asteroid. If we can stop it before it gets crushed by debris we might be able to learn something worthwhile about the construction."
  ABANDONED_ARRAY_PROJECT:0 "Abandoned Sensor Array"
  ABANDONED_ARRAY_PROJECT_DESC:0 "An abandoned sensor dish seems to be in working condition. If we perform some repairs and figure out how it functions we might be able to gain more insight into neighboring systems."
- ALIEN_RACER_PROJECT:0 "Adrift"
+ ALIEN_RACER_PROJECT:0 "ล่องลอยเคว้งคว้าง"
  ALIEN_RACER_PROJECT_DESC:0 "An alien ship is drifting inside an asteroid belt. It will not respond to hails. We should investigate and see what is going on."
  PSIONIC_HORSES_PROJECT:0 "The Rulers of the Plains"
  PSIONIC_HORSES_PROJECT_DESC:0 "A majestic race of mammals roam fields of water grass. They seem skittish and have insight into our approaches. Studying them up close could give us more information."
