--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -33,7 +33,7 @@
  OUTLINER_SITUATION_OUTCOME_TIME:1 "An outcome to this Situation is expected in $MONTHS|Y$ month(s), based on the current monthly change of $CHANGE$"
  CLICK_TO_OPEN_SITUATION_LOG:0 "§GClick to open the Situation Log§!"
  SITUATION_STAGE_NO_EFFECTS:0 "This Stage has no effects."
- SITUATION_TARGET_TOOLTIP:0 "This Situation is focused around the $TARGET_TYPE$ $TARGET|Y$."
+ SITUATION_TARGET_TOOLTIP:0 "สถานการณ์นี้โฟกัสไปที่ $TARGET|Y$"
  SITUATION_TARGET_TOOLTIP_NO_TARGET:0 "The effects of this Situation are felt empire-wide."
  SITUATION_START_HEADER:0 "Start Value"
  SITUATION_START_TOOLTIP:0 "The Situation began at $VALUE|Y0$ progress."
@@ -44,19 +44,19 @@
  situation_monthly_change_tooltip_little_control:0 "The progress of this §YSituation§! is largely out of our hands."
  situation_monthly_change_tooltip_approaches_dependent:0 "This §YSituation§! will progress towards alternative outcomes based on our selected §YApproach§!."
  set_situation_approach_icon_text:0 "This option will change your §YApproach§! to this §YSituation§!."
- approach_irreversible_tooltip:0 "§RChoosing this Approach is irreversible.§!"
+ approach_irreversible_tooltip:0 "§Rการเลือกแนวทางนี้ไม่สามารถย้อนกลับได้§!"
  stage_unknown_effects:0 "We are not sure what will happen during this Stage."
- situation_mysterious_labyrinth:0 "The Mysterious Labyrinth"
+ situation_mysterious_labyrinth:0 "เขาวงกตลึกลับ"
  situation_mysterious_labyrinth_type:0 "$situation_mysterious_labyrinth$"
  situation_mysterious_labyrinth_desc:0 "We have discovered a suspicious, seemingly alien labyrinth on [Target.GetName]. It is unclear how or why it got there."
- approach_investigate:2 "Explore its Interior"
- approach_observe:2 "Monitor it from Afar"
- approach_cordon_off:1 "Quarantine it"
- approach_destroy:1 "Destroy it"
+ approach_investigate:2 "สำรวจภายใน"
+ approach_observe:2 "เฝ้าดูมันจากระยะไกล"
+ approach_cordon_off:1 "กักกันมัน"
+ approach_destroy:1 "ทำลายมัน"
  approach_destroy_labyrinth_tooltip:0 "We will attempt to be rid of the Labyrinth."
- approach_default:2 "Do Nothing"
- approach_encourage:1 "Encourage it"
- approach_discourage:1 "Discourage it"
+ approach_default:2 "ไม่ทำอะไร"
+ approach_encourage:1 "ส่งเสริมสนับสนุน"
+ approach_discourage:1 "กีดกัน"
  stage_1:1 "Stage I"
  stage_2:1 "Stage II"
  stage_3:1 "Stage III"
@@ -69,7 +69,7 @@
  stage_3_alt:0 "$stage_3$"
  string_current_approach:0 "แนวทางปัจจุบัน"
  situation_mysterious_labyrinth_monthly_change_tooltip:0 "$situation_monthly_change_tooltip_approaches_dependent$"
- situation.5.name:0 "The Mysterious Labyrinth"
+ situation.5.name:0 "เขาวงกตลึกลับ"
  situation.5.desc:1 "Our colonists on [This.GetName] have made a startling discovery. Deep in a remote mountain range, they stumbled across a mysterious structure that, according to our scans, was not there when we first surveyed the [This.GetPlanetMoon]. Its condition is excellent, almost as if it was newly built, but there is no evidence of [Owner.GetAdj] involvement in its construction. In fact, its architecture shows alien characteristics, with curves and angles that appear unusual and even disturbing to our aesthetic sensibilities.\n\nAt its entrance, there is a sign (in our language, curiously) with the words "Welcome to the Magnificent Labyrinth of Exotic Trans-Dimensional Anomalies. Enter at your own risk.""
  situation.5.A:0 "Send a team to investigate."
  situation.5.A.tooltip:0 "This Approach will cost £energy£ §R5§! §YEnergy§! a month."
@@ -315,9 +315,9 @@
  gravity_well_mid:0 "Ergosphere"
  gravity_well_high:0 "Accretion Disk"
  gravity_well_no_return:0 "Point of No Return"
- approach_retreat:0 "Retreat"
- approach_stand:1 "Maintain Orbit"
- approach_advance:0 "Advance"
+ approach_retreat:0 "ถอย"
+ approach_stand:1 "รักษาวงโคจร"
+ approach_advance:0 "เดินหน้า"
  approach_outcome_tooltip:0 "This Approach will advance the Situation towards a certain outcome."
  string_gravitational_pull:0 "Gravitational Pull"
  country_situations:0 "สถานการณ์"
@@ -414,15 +414,15 @@
  situation_exotic_gases_deficit_monthly_change_tooltip:0 "$situation_deficit_monthly_change_tooltip$"
  deficit_approach_do_nothing:0 "คงค่าใช้จ่ายปัจจุบัน"
  deficit_approach_do_nothing_tooltip:0 "วิธีการนี้จะไม่มีผลใดๆ"
- deficit_approach_recycling:0 "Recycle Materials"
- deficit_approach_invest_in_mote_producers:0 "Invest in Mote Production"
- deficit_approach_invest_in_crystal_producers:0 "Invest in Crystal Production"
- deficit_approach_invest_in_gas_producers:0 "Invest in Gas Production"
- deficit_approach_cut_science_investment:0 "Cut Scientific Investment"
+ deficit_approach_recycling:0 "รีไซเคิลวัสดุ"
+ deficit_approach_invest_in_mote_producers:0 "ลงทุนในการผลิตผงแร่ระเหย"
+ deficit_approach_invest_in_crystal_producers:0 "ลงทุนในการผลิตคริสตัล"
+ deficit_approach_invest_in_gas_producers:0 "ลงทุนในการผลิตแก๊ส"
+ deficit_approach_cut_science_investment:0 "ตัดการลงทุนทางวิทยาศาสตร์"
  deficit_approach_cut_investment:1 "ตัดการลงทุน"
  deficit_approach_cut_maintenance:1 "Cut Habitats' Maintenance"
- deficit_approach_invest_in_alloys_production:0 "Invest in our [Owner.GetAlloyProducerPlural]"
- deficit_approach_invest_in_farmers:0 "Invest in [Owner.GetFarmerPlural]"
+ deficit_approach_invest_in_alloys_production:0 "ลงทุนใน [Owner.GetAlloyProducerPlural] ของเรา"
+ deficit_approach_invest_in_farmers:0 "ลงทุนใน [Owner.GetFarmerPlural]"
  deficit_first:0 "ขาดดุลเล็กน้อย"
  deficit_second:0 "ขาดดุลหนัก"
  deficit_third:0 "ขาดดุลอย่างรุนแรง"
@@ -549,9 +549,9 @@
  situation_tainted_voidspawn_type:1 "Voidspawn Contaminant"
  situation_tainted_voidspawn_desc:0 "Our [Owner.GetWaterCoolantLower] supply has been contaminated with the acidic venom from the Voidspawn. "
  situation_tainted_voidspawn_monthly_change_tooltip:0 "This §YSituation§! will progress slower if we elect to study the contaminant, but we will gain research along the way from that §YApproach§!."
- approach_clean_the_contaminant:1 "Clean it"
+ approach_clean_the_contaminant:1 "ทำความสะอาด"
  approach_clean_the_contaminant_effect:1 "We need to clean up the contaminant as quickly as possible so we can get back to our [Owner.GetParadeStudy]."
- approach_study_the_contaminant:1 "Study it"
+ approach_study_the_contaminant:1 "ศึกษามัน"
  approach_study_the_contaminant_effect:1 "Do not waste this valuable opportunity, let's study the contaminant before returning to the [Owner.GetParadeStudy]."
  situation_stellarite_infested_star:0 "Infested [Target.GetName]"
  situation_stellarite_infested_star_type:0 "Infested Star"
@@ -559,9 +559,9 @@
  situation_stellarite_infested_star_fail_tooltip:0 "[Target.GetName] will be extinguished, rendering the system uninhabitable."
  situation_stellarite_infested_star_finish_tooltip:0 "[Target.GetName] will return to its normal state."
  situation_stellarite_infested_star_monthly_change_tooltip:0 "The progress of this §YSituation§! depends on our ability to find a cure."
- approach_search_for_a_cure:1 "Search for a Cure"
+ approach_search_for_a_cure:1 "หาวิธีรักษา"
  approach_search_for_a_cure_effect:0 "We need every scientist available to study the strange sunspots. Our Capital depends on it."
- approach_cure_it:1 "Cure the Star"
+ approach_cure_it:1 "รักษาดวงดาว"
  approach_cure_it_effect:0 "We now have a cure. We can only hope that it's not too late."
  situation.1000.name:0 "[This.GetLeviathanTargetName]"
  situation.1000.desc.small:0 "The day has arrived. Our [Owner.GetSensoryWorkers] were in place and ready to give us a thorough exploration of the §Y[This.GetTrophyName]§!. As the study, began a small portion of our consciousness focused on §Y[Target.GetName]§! to absorb the study of the anomalous item. However, the revelations were not as interesting as we had hoped as we dragged the remains to the [Target.GetPlanetHabitat].\n\nShortly after the process began, we decided to move the study to the center of our cluster on [Target.GetName], where the specialized [Owner.GetSensoryWorkers] will continuously observe it. Hopefully something more will come of it."
@@ -816,11 +816,11 @@
  situation_kaleidoscope_desc: "A colorful energy parasite is infecting our power grid, feasting on our energy supplies. We could indulge it, or use an §YEspionage Operation§! to pass this problem to another empire.\n\n[GetKaleidoscopeMood]."
  situation_kaleidoscope_monthly_change_tooltip: "Starving the §HKaleidoscope§! will lower its §Ymood§!, increasing the chance of negative events. Feeding it will increase it, keeping it appeased and placid."
  situation_unknown_outcome_kaleidoscope: "The Kaleidoscope's §Ymood§! will determine the final outcome."
- approach_no_food: "Do not feed it"
+ approach_no_food: "อย่าให้อาหารมัน"
  approach_no_food_tooltip: "Lowers §Ymood§!. A starved Kaleidoscope will lash out and give us trouble."
- approach_little_food: "Feed it"
+ approach_little_food: "ให้อาหารมัน"
  approach_little_food_tooltip: "Improves §Ymood§!. A sated Kaleidoscope will produce pleasing lights and little trouble."
- approach_a_lot_of_food: "Overfeed it"
+ approach_a_lot_of_food: "ให้อาหารมันมากๆ"
  approach_a_lot_of_food_tooltip: "Greatly improves §Ymood§!. An overstuffed Kaleidoscope will give us no trouble, but it will cost us dearly."
  kaleidoscope_progress: "Overload"
  kaleidoscope_mood_angry: "The Kaleidoscope is §Pangry§! and ready to lash out at any moment."
