--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -644,7 +644,7 @@
  tech_genome_mapping_desc:1 "Mapping the genome of an individual through the sequencing of their DNA opens up for tailored medical treatments and therapies."
  tech_epigenetic_triggers:0 "กระตุ้นการเรียนรู้ด้านกระบวนการเหนือพันธุกรรม"
  tech_epigenetic_triggers_desc:1 "Advanced DNA methylation techniques allow for functionally significant alterations to be made to arbitrary genomes."
- TECH_UNLOCK_EPIGENETICS_TITLE:0 "§HUnlocks Feature:§! Epigenetic Triggers"
+ TECH_UNLOCK_EPIGENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! กระตุ้นการเรียนรู้ด้านกระบวนการเหนือพันธุกรรม (เทคโนโลยี)"
  TECH_UNLOCK_EPIGENETICS_DESC:0 "Allows us to remove Presapient Traits from Biological Species through Species Modification."
  tech_cloning:0 "การโคลนนิ่ง"
  tech_cloning_desc:1 "Breakthroughs in enucleation and artificial womb technology allows for the mass-production of individuals based on a common genetic template."
@@ -672,15 +672,15 @@
  tech_vitality_boosters_desc:1 "Where the body fails, science intervenes."
  tech_lithoid_transgenesis:0 "การถ่ายโอนยีน[เผ่าหิน]ไปยังสิ่งมีชีวิตอื่น"
  tech_lithoid_transgenesis_desc:0 "The similarities between silicon based and carbon based life allow us to synthesize Lithoid evolutionary traits in carbon based species."
- TECH_UNLOCK_LITHOID_GENETICS_TITLE:0 "§HUnlocks Feature:§! Lithoid Transgenesis"
+ TECH_UNLOCK_LITHOID_GENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การถ่ายโอนยีนเผ่าหินไปยังสิ่งมีชีวิตอื่น (เทคโนโลยี)"
  TECH_UNLOCK_LITHOID_GENETICS_DESC:0 "Allows us to add Lithoid Traits to Biological Species through Species Modification."
  tech_plantoid_transgenesis:0 "การถ่ายโอนยีน[พืช]ไปยังสิ่งมีชีวิตอื่น"
  tech_plantoid_transgenesis_desc:0 "With some artificial encouragement, the evolutionary adaptations found in botanical species can be replicated in other forms of life."
- TECH_UNLOCK_PLANTOID_GENETICS_TITLE:0 "§HUnlocks Feature:§! Botanical Transgenesis"
+ TECH_UNLOCK_PLANTOID_GENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การถ่ายโอนยีนพืชไปยังสิ่งมีชีวิตอื่น (เทคโนโลยี)"
  TECH_UNLOCK_PLANTOID_GENETICS_DESC:0 "Allows us to add Botanical Traits to Organic Species through Species Modification."
  tech_leviathan_transgenesis:0 "การถ่ายโอนยีน[ลิไวธาน]ไปยังสิ่งมีชีวิตอื่น"
  tech_leviathan_transgenesis_desc:0 "Galactic fauna have remarkable adaptions to life in interstellar space. Mastery of these traits will be our genetic triumph."
- TECH_UNLOCK_LEVIATHAN_GENETICS_TITLE:0 "§HUnlocks Feature:§! Leviathan Transgenesis"
+ TECH_UNLOCK_LEVIATHAN_GENETICS_TITLE:0 "§Hปลดล็อกคุณสมบัติ:§! การถ่ายโอนยีนลิไวธานไปยังสิ่งมีชีวิตอื่น (เทคโนโลยี)"
  TECH_UNLOCK_LEVIATHAN_GENETICS_DESC:0 "Allows us to add Leviathan Traits to Organic Species through Species Modification."
  tech_doctrine_fleet_size_1:0 "ทฤษฎี: การสู้รบในอวกาศ"
  tech_doctrine_fleet_size_1_desc:1 "Gradual adaptation to the realities of deep-space combat allows us to effectively coordinate larger maneuvers."
