--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -1287,7 +1287,7 @@
  SET_PLANET_HEALTH_EFFECT:0 "ตั้งพลังชีวิตเป็น $VALUE|Y$"
  ADD_TRAIT:1 "§H$LEADER$§! ได้รับคุณลักษณะ §H$TRAIT$§! โดยให้ผลดังต่อไปนี้:\n$EFFECTS$\n"
  REMOVE_TRAIT:1 "Removes $TRAIT$ trait from $LEADER|Y$\n"
- REMOVE_ALL_NEGATIVE_TRAITS:1 "ลบคุณลักษณะเชิงลบทั้งหมดจาก $LEADER|Y$\n"
+ REMOVE_ALL_NEGATIVE_TRAITS:1 "ลบคุณลักษณะเชิงลบทั้งหมดของ $LEADER|Y$\n"
  REMOVE_ALL_POSITIVE_TRAITS:0 "Removes all positive traits from $LEADER|Y$\n"
  REMOVE_ALL_TRAITS:0 "Removes all traits from $LEADER|Y$\n"
  CHANGE_COUNTRY_TYPE_EFFECT:0 "ประเภทของจักรวรรดิจะเปลี่ยนเป็น $TYPE|Y$"
@@ -1427,7 +1427,7 @@
  count_country_all_trigger:0 "$IS_ALL_NOT$ Countries fulfill the following conditions"
  count_neighbor_country_trigger:1 "Number of Neighboring Countries$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_neighbor_country_all_trigger:0 "$IS_ALL_NOT$ Neighboring Countries fulfill the following conditions"
- count_member_trigger:1 "Number of Federation Members$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
+ count_member_trigger:1 "จำนวนสมาชิกสหพันธ์$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_member_all_trigger:0 "$IS_ALL_NOT$ Federation Members fulfill the following conditions"
  count_relation_trigger:1 "จำนวนความสัมพันธ์$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_relation_all_trigger:0 "$IS_ALL_NOT$ Relations fulfill the following conditions"
@@ -1450,9 +1450,9 @@
  any_planet_army_trigger:0 "Any Army on Planet"
  effect_random_planet_army:0 "Random Army on Planet"
  effect_every_planet_army:0 "Every Army on Planet"
- any_member_trigger:1 "Any Federation Member:"
+ any_member_trigger:1 "สมาชิกสหพันธ์:"
  effect_random_member:1 "Random Federation Member"
- effect_every_member:1 "Every Federation Member"
+ effect_every_member:1 "สมาชิกสหพันธ์ทั้งหมด"
  TRIGGER_IS_CONSTRUCTING:0 "Is constructing a $KEY|Y$"
  TRIGGER_NOT_IS_CONSTRUCTING:0 "Is NOT constructing a $KEY|Y$"
  TRIGGER_HAS_COMPONENT:0 "มีส่วนประกอบ $KEY|Y$"
